syntax = "proto3";

option go_package = "github.com/dsg-uwaterloo/oblishard/api/shardnode";

package shardnode;

service ShardNode {
    rpc Read (ReadRequest) returns (ReadReply) {}
    rpc Write (WriteRequest) returns (WriteReply) {}    
    rpc JoinRaftVoter (JoinRaftVoterRequest) returns (JoinRaftVoterReply) {}
}

message ReadRequest {
    string block = 1;
}

message ReadReply {
    string value = 1;
}

message WriteRequest {
    string block = 1;
    string value = 2;
}

message WriteReply {
    bool success = 1;
}

message JoinRaftVoterRequest {
    int32 node_id = 1;
    string node_addr = 2;
}

message JoinRaftVoterReply {
    bool success = 1;
}